# GTA5-Tools

./: CS.py  README.md  main.py  pyproject.toml
Core/ConfigFunction/: Url.py
Core/FileFunction/: JsonFunc.py  PathFunc.py
Core/InjectFunction/: __init__.py
Core/NetFunction/: Download.py  __init__.py
Core/NetFunction/Download/: MultiThreadedDownload.py  SingleThreadedDownload.py  __init__.py
Core/ShareFunction/ErrorHandling/: NetError.py  __init__.py
Core/config/: __init__.py
Core/share/: __init__.py
Ui/: StyleSheet.py  __init__.py  icon.py
Ui/CheatsPage/: BannerWidget.py  CheatsCard.py  CheatsPage.py  HomeWidget.py  __init__.py
Ui/CheatsPage/CheatsPage/: CheatsPageBase.py  Control.py  MenuContentCard.py  MenuInfoCard.py  __init__.py
Ui/HomePage/: BannerWidget.py  LinkCard.py
Ui/SettingPage/: __init__.py
Ui/resource/: resource.qrc
Ui/resource/i18n/: MenuInstaller.ts  MenuInstaller_zh_CN.ts
Ui/resource/qss/dark/: cheats_card.qss  cheats_home.qss
Ui/resource/qss/dark/CheatsPage/: cheats_card.qss  cheats_home.qss  cheats_page.qss
Ui/resource/qss/dark/HomePage/: home_widget.qss
Ui/resource/qss/light/: cheats_home.qss  home_widget.qss
Ui/resource/qss/light/CheatsPage/: cheats_card.qss  cheats_home.qss  cheats_page.qss
